--- a/package.json
+++ b/package.json
@@ -11,20 +11,22 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@paypal/react-paypal-js": "^7.8.2",
-    "@thirdweb-dev/react": "^3.6.10",
-    "@thirdweb-dev/sdk": "^3.6.10",
+    "cookie": "^0.5.0",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "express": "^4.18.2",
-    "firebase": "^9.17.0",
+    "firebase": "^9.17.1",
     "framer-motion": "^6.5.1",
     "jsonwebtoken": "^9.0.0",
     "next": "^13.1.2",
     "openai": "^3.1.0",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/react": "18.0.27",
+    "typescript": "4.9.5"
+  }
 }
